# Sketch_Object_Recognition

./: README.md
br/: README.md
demo/: README  readme
demo/bag of word/: main.cpp  main.cpp~
demo/histogram/: main.cpp  main.cpp~
demo/knn/: main.cpp
demo/predict/: CMakeLists.txt  CMakeLists.txt~  README  README~  dict_50.yml  main.cpp  main.cpp~  predict  training_set.yml
demo/preprocess image/: main.cpp  main.cpp~
include/: Dictionary.h  HoG.h  Predict.h  Preprocess.h  Quantify.h
src/: Dictionary.cpp  HoG.cpp  Predict.cpp  Preprocess.cpp  Quantify.cpp
