cmake_minimum_required(VERSION 2.8.9)
project (object_recognition)

include_directories( ../../include )

find_package( OpenCV REQUIRED )
add_executable( Predict main.cpp ../../src/Predict.cpp ../../src/HoG.cpp ../../src/Quantify.cpp )
target_link_libraries( Predict ${OpenCV_LIBS} )

include(CheckCXXCompilerFlag)
CHECK_CXX_COMPILER_FLAG("-std=c++11" COMPILER_SUPPORTS_CXX11)
CHECK_CXX_COMPILER_FLAG("-std=c++0x" COMPILER_SUPPORTS_CXX0X)
if(COMPILER_SUPPORTS_CXX11)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
elseif(COMPILER_SUPPORTS_CXX0X)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
else()
        message(STATUS "The compiler ${CMAKE_CXX_COMPILER} has no C++11 support. Please use a different C++ compiler.")
endif()
               
